# p37-euler

./: .gitignore  CMakeLists.txt  README.md
src/: Digits.cpp  Digits.h  PrimeSieve.cpp  PrimeSieve.h  TruncatablePrime.cpp  TruncatablePrime.h  main.cpp
unit_tests/: DigitsTest.cpp  PrimeSieveTest.cpp  TruncatablePrimeTest.cpp
